<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/fechaHoraTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_y_hora"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/motivoCitaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/motivo_de_la_cita"
            android:textColor="@color/material_dynamic_secondary40" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/idPersonalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_del_personal"
                android:textColor="@color/material_dynamic_secondary40" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/numSalaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/n_mero_de_sala"
                android:textColor="@color/material_dynamic_secondary40" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:id="@+id/btnEliminar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/eliminar" />

            <Button
                android:id="@+id/btnEditar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:text="@string/editar" />
        </LinearLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>






